--- a/movie-api/composer.json
+++ b/movie-api/composer.json
@@ -22,6 +22,11 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "classmap": [
+            "database/seeds",
+            "database/factories",
+            "app/Http/Controllers"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
